<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".CalculatriceFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/calculatrice"
        android:textSize="50dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:fontFamily="@font/italianno"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/valeur1"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/et1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:inputType="number"
            android:hint="0"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/valeur2"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/et2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:inputType="number"
            android:hint="0"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textSize="22dp"
            android:textStyle="bold"
            android:background="@drawable/button_bg"/>

        <Button
            android:id="@+id/btnMoins"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/moins"
            android:textSize="25dp"
            android:textStyle="bold"
            android:background="@drawable/button_bg"/>
        <Button
            android:id="@+id/btnMulti"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiplier"
            android:textSize="20dp"
            android:textStyle="bold"
            android:background="@drawable/button_bg"/>
        <Button
            android:id="@+id/btnDiv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/diviser"
            android:textSize="22dp"
            android:textStyle="bold"
            android:background="@drawable/button_bg"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAucarre"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/au_carre"
            android:textSize="22dp"
            android:textStyle="bold"
            android:background="@drawable/button_bg" />

        <Button
            android:id="@+id/btnAucube"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/au_cube"
            android:textSize="22dp"
            android:textStyle="bold"
            android:background="@drawable/button_bg"/>

        <Button
            android:id="@+id/btnVider"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/vider"
            android:textSize="25dp"
            android:textStyle="bold"
            android:background="@drawable/button_bg2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/resultat"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/tvResultat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:inputType="number"
            android:hint="0"
            android:textSize="22dp"
            android:gravity="center"/>

    </LinearLayout>


</FrameLayout>