<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".ConvertorFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/convertor"
        android:textSize="50dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:fontFamily="@font/italianno"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/baseline_currency_exchange_24"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="340dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/montant"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/etMontant"
            android:layout_marginLeft="75px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="26dp"
            android:textColor="@color/black"
            android:textAlignment="center"/>
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="420dp">
        <RadioButton
            android:id="@+id/rbDollar"
            android:layout_width="wrap_content"
            android:layout_height="140px"
            android:text="@string/dollars"
            android:textSize="25dp"/>
        <RadioButton
            android:id="@+id/rbEuro"
            android:layout_width="wrap_content"
            android:layout_height="140px"
            android:text="@string/euro"
            android:textSize="25dp"
            android:layout_marginLeft="150px"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="500dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultat"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tvResultat"
            android:layout_marginLeft="75px"
            android:layout_width="575px"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="26dp"
            android:textColor="@color/black"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="150px"
            android:layout_height="wrap_content"
            android:text="Mad"
            android:textSize="26dp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="570dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btnConvertir"
            android:layout_width="450px"
            android:layout_height="170px"
            android:text="@string/convert"
            android:textSize="21dp"
            android:background="@drawable/button_bg"
            android:textColor="@color/light_blue"/>
        <Button
            android:id="@+id/btnVider"
            android:layout_width="450px"
            android:layout_height="170px"
            android:text="@string/vider"
            android:textSize="21dp"
            android:background="@drawable/button_bg"
            android:layout_marginLeft="100px"
            android:textColor="@color/purple"/>
    </LinearLayout>

</FrameLayout>